src/index.less
/* ... */
  .ant-popover-placement-top > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-topLeft > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-topRight > .ant-popover-content > .ant-popover-arrow {
    bottom: 6.2px;
    border-top-color: transparent;
    border-right-color: #fff;
    border-bottom-color: #fff;
    border-left-color: transparent;
    -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.07);
            box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.07);
  }
  .ant-popover-placement-top > .ant-popover-content > .ant-popover-arrow {
    left: 50%;
    -webkit-transform: translateX(-50%) rotate(45deg);
        -ms-transform: translateX(-50%) rotate(45deg);
            transform: translateX(-50%) rotate(45deg);
  }
  .ant-popover-placement-topLeft > .ant-popover-content > .ant-popover-arrow {
    left: 16px;
  }
  .ant-popover-placement-topRight > .ant-popover-content > .ant-popover-arrow {
    right: 16px;
  }
  .ant-popover-placement-right > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-rightTop > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-rightBottom > .ant-popover-content > .ant-popover-arrow {
    left: 6px;
    border-top-color: transparent;
    border-right-color: transparent;
    border-bottom-color: #fff;
    border-left-color: #fff;
    -webkit-box-shadow: -3px 3px 7px rgba(0, 0, 0, 0.07);
            box-shadow: -3px 3px 7px rgba(0, 0, 0, 0.07);
  }
  .ant-popover-placement-right > .ant-popover-content > .ant-popover-arrow {
    top: 50%;
    -webkit-transform: translateY(-50%) rotate(45deg);
        -ms-transform: translateY(-50%) rotate(45deg);
            transform: translateY(-50%) rotate(45deg);
  }
  .ant-popover-placement-rightTop > .ant-popover-content > .ant-popover-arrow {
    top: 12px;
  }
  .ant-popover-placement-rightBottom > .ant-popover-content > .ant-popover-arrow {
    bottom: 12px;
  }
  .ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-bottomLeft > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-bottomRight > .ant-popover-content > .ant-popover-arrow {
    top: 6px;
    border-top-color: #fff;
    border-right-color: transparent;
    border-bottom-color: transparent;
    border-left-color: #fff;
    -webkit-box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.06);
            box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.06);
  }
  .ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow {
    left: 50%;
    -webkit-transform: translateX(-50%) rotate(45deg);
        -ms-transform: translateX(-50%) rotate(45deg);
            transform: translateX(-50%) rotate(45deg);
  }
  .ant-popover-placement-bottomLeft > .ant-popover-content > .ant-popover-arrow {
    left: 16px;
  }
  .ant-popover-placement-bottomRight > .ant-popover-content > .ant-popover-arrow {
    right: 16px;
  }
  .ant-popover-placement-left > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-leftTop > .ant-popover-content > .ant-popover-arrow,
  .ant-popover-placement-leftBottom > .ant-popover-content > .ant-popover-arrow {
    right: 6px;
    border-top-color: #fff;
    border-right-color: #fff;
    border-bottom-color: transparent;
    border-left-color: transparent;
    -webkit-box-shadow: 3px -3px 7px rgba(0, 0, 0, 0.07);
            box-shadow: 3px -3px 7px rgba(0, 0, 0, 0.07);
  }
  .ant-popover-placement-left > .ant-popover-content > .ant-popover-arrow {
    top: 50%;
    -webkit-transform: translateY(-50%) rotate(45deg);
        -ms-transform: translateY(-50%) rotate(45deg);
            transform: translateY(-50%) rotate(45deg);
  }
  .ant-popover-placement-leftTop > .ant-popover-content > .ant-popover-arrow {
    top: 12px;
  }
  .ant-popover-placement-leftBottom > .ant-popover-content > .ant-popover-arrow {
    bottom: 12px;
  }

  td.ant-table-cell {
    color: black
  }

